tests/NormalTests/paczka1/fuzzy1/75466526.err
Error in line 8: A794 S596 323,86
Error in line 12: 29Mr5v1k A794 -3,0
Error in line 14: cjz S363 81,9
Error in line 17: 29Mr5v1k A794 15,9
Error in line 2: A794 S596 81,3
Error in line 29: 29Mr5v1k A859 90,6
Error in line 19: cjz S596 43,0
